# Codac

./: .gitignore  README.md  codac.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codac_basic.yml
codac/: test_codac.py
src/: codac.py  test_codac.py  test_codac2.py
src/data_joiner/: __init__.py  __main__.py  codac.py  config.py  df.py  functions.py  tools.py
src/tests/: __init__.py  conftest.py  test_codac.py  test_df_columns_rename.py  test_df_country_filter_.py  test_functions.py
tests/: __init__.py  conftest.py  test_codac.py
