[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Codac"
version = "0.8.4"
authors = [{ name="Mariusz Wiśniowski", email="mariusz.wisniowski@capgemini.com" }, ]
description = "Codac PySpark Assignment. Upskilling task."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",    
    "Operating System :: OS Independent",]
[tool.setuptools.packages.find]
where=["src"]
exclude = ["tests"]
[project.scripts]
Codac = "data_joiner.__main__:main"
